fix alignment in mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4142,6 +4142,7 @@ form>.fields>.field {
 	.banner {
 		box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
 		min-height: calc(100vh - 44px);
+		max-height: 100vh;
 	}
 
 	.banner:before {
